[gd_scene load_steps=14 format=4 uid="uid://cxthfhpu8qf3"]

[ext_resource type="Texture2D" uid="uid://dihnmqkos508u" path="res://Assets/TX Tileset Grass.png" id="1_3atk3"]
[ext_resource type="Texture2D" uid="uid://cn1gn7c03dhjs" path="res://Assets/TX Tileset Stone Ground.png" id="2_bp0wf"]
[ext_resource type="Texture2D" uid="uid://ddu01y8352kwa" path="res://Assets/TX Tileset Wall.png" id="3_kkfd8"]
[ext_resource type="Texture2D" uid="uid://do5dg0skc4v4c" path="res://Assets/TX Struct.png" id="4_ufnsk"]
[ext_resource type="Script" uid="uid://0euqpj0qq31j" path="res://Scenes/Maps/Baddie_Spawner.gd" id="5_bp0wf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_g86u4"]
texture = ExtResource("1_3atk3")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o2go4"]
texture = ExtResource("2_bp0wf")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
6:3/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
6:5/0 = 0
0:6/0 = 0
2:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4r0br"]
texture = ExtResource("3_kkfd8")
texture_region_size = Vector2i(32, 32)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
1:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
13:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
12:4/0 = 0
13:4/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
6:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
6:7/0 = 0
1:9/0 = 0
2:9/0 = 0
4:9/0 = 0
5:9/0 = 0
1:10/0 = 0
2:10/0 = 0
4:10/0 = 0
5:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_loq7g"]
texture = ExtResource("4_ufnsk")
texture_region_size = Vector2i(32, 32)
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
1:1/0 = 0
2:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
13:1/0 = 0
14:1/0 = 0
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
13:2/0 = 0
14:2/0 = 0
1:3/0 = 0
2:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
13:4/0 = 0
14:4/0 = 0
1:5/0 = 0
2:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
13:5/0 = 0
14:5/0 = 0
1:6/0 = 0
2:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
1:7/0 = 0
2:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0

[sub_resource type="TileSet" id="TileSet_a0g1t"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_g86u4")
sources/1 = SubResource("TileSetAtlasSource_o2go4")
sources/2 = SubResource("TileSetAtlasSource_4r0br")
sources/3 = SubResource("TileSetAtlasSource_loq7g")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_3atk3"]
vertices = PackedVector2Array(-86, 38, -86, -66, 62, -66, 62, 66, -198, 66, -138, 38, -198, -66, -138, -66)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(0, 3, 4, 5), PackedInt32Array(5, 4, 6, 7)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-208, -76, -208, 76, 72, 76, 72, -76, -96, -76, -96, 28, -128, 28, -128, -76)])

[sub_resource type="Curve2D" id="Curve2D_3atk3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -184, -52, 0, 0, 0, 0, -184, 52, 0, 0, 0, 0, -184, -52)
}
point_count = 3

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_bp0wf"]
friction = 0.0
bounce = 1.0

[node name="Map1" type="TileMapLayer"]
position = Vector2(200, 100)
tile_map_data = PackedByteArray("AAAAAAAAAAAFAAUAAAD//wEAAAADAAMAAAAAAAEAAAADAAMAAAD+/wEAAAAEAAMAAAD8////AQADAAEAAAD9////AAAGAAIAAAD9/wAAAAAGAAIAAAD8/wAAAQADAAIAAAD8/wEAAAAAAAIAAAD9/wEAAAAAAAIAAAD+////AAACAAIAAAD///7/AAACAAIAAAAAAP//AAAFAAQAAAD+//7/AAADAAMAAAAAAP7/AAADAAIAAAABAP7/AAAEAAMAAAABAAEAAAACAAMAAAABAAAAAAACAAMAAAABAP//AAACAAMAAAD9//7/AAABAAMAAAD8//7/AQADAAEAAAACAP7/AQADAAEAAAACAAAAAQADAAEAAAACAAEAAQADAAEAAAACAP3/AQAHAAAAAAABAP3/AQABAAMAAAAAAP3/AQABAAMAAAD///3/AQABAAMAAAD+//3/AQABAAMAAAD9//3/AQABAAMAAAD8//3/AQAGAAAAAAACAAIAAQAHAAIAAAABAAIAAQABAAMAAAAAAAIAAQABAAMAAAD//wIAAQABAAMAAAD+/wIAAQABAAMAAAD9/wIAAQABAAMAAAD8/wIAAQABAAMAAAD7/wIAAQABAAMAAAD6/wIAAQABAAMAAAD7//3/AQABAAMAAAD6//3/AQABAAMAAAD7/wEAAAAFAAMAAAD6//7/AAAGAAEAAAD7/wAAAAADAAEAAAD6////AAADAAEAAAD6/wEAAAABAAIAAAD6/wAAAAABAAIAAAD7////AAACAAEAAAD7//7/AAACAAEAAAACAP//AQADAAEAAAD/////AAADAAMAAAD//wAAAAADAAMAAAD+/wAAAAADAAIAAAA=")
tile_set = SubResource("TileSet_a0g1t")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_3atk3")

[node name="EnemySpawner" type="Path2D" parent="."]
curve = SubResource("Curve2D_3atk3")
script = ExtResource("5_bp0wf")

[node name="Target" type="Marker2D" parent="EnemySpawner"]
position = Vector2(16, 0)

[node name="SpawnDelay" type="Timer" parent="EnemySpawner"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="BaddieSpawnLocation" type="PathFollow2D" parent="EnemySpawner"]
position = Vector2(-184, -52)
rotation = 1.5708

[node name="RigidBody2D" type="RigidBody2D" parent="."]
visible = false
mass = 1000.0
physics_material_override = SubResource("PhysicsMaterial_bp0wf")
gravity_scale = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
polygon = PackedVector2Array(-192, -92, -192, -68, -120, -68, -120, 20, -104, 20, -104, -68, 64, -68, 64, 68, -192, 68, -192, 100, 96, 100, 96, -92)

[connection signal="timeout" from="EnemySpawner/SpawnDelay" to="EnemySpawner" method="_on_spawn_delay_timeout"]
